--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,9 +7,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 <!-- Highlight.js Github Dark Theme -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/github-dark.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/github-dark.min.css"
+      integrity="sha384-wH75j6z1lH97ZOpMOInqhgKzFkAInZPPSPlZpYKYTOqsaizPvhQZmAtLcPKXpLyH"
+      crossorigin="anonymous">
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"
+        integrity="sha384-kzRrpuQHnqX5Gq+q3tcg2M4tvH7T+NiYnXaqiV4qHcQy57AfFVQjoWQwW7XmYjZT"
+        crossorigin="anonymous"></script>
 <!-- Line Numbers Plugin JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlightjs-line-numbers.js/2.8.0/highlightjs-line-numbers.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlightjs-line-numbers.js/2.8.0/highlightjs-line-numbers.min.js"
+        integrity="sha384-XgUOeK0txC1oW0PJcOwNl51DqPE9aH3nlr79Tx8Lfwl1RYNoQAgNZb7a9JYdqN66"
+        crossorigin="anonymous"></script>
