RPS-408: Docs site visual and structural improvements (#18)
* improvements

* update

* update

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,3 +5,11 @@
 
 <link rel="stylesheet" href="{{ "css/theme-repsy.css" | relURL }}">
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+<!-- Highlight.js Github Dark Theme -->
+<link rel="stylesheet" href="{{ "css/github-dark.min.css" | relURL }}">
+
+<script src="{{ "js/highlight.min.js" | relURL }}"></script>
+
+<!-- Line Numbers Plugin JS -->
+<script src="{{ "js/highlightjs-line-numbers.min.js" | relURL }}"></script>
